# tetris-ai

./: .gitignore  CMakeLists.txt  README.md  dqn.py  genetic.py  naive.py  random_actions.py  test.py
ga/: FitnessFunction.py  Population.py
include/: action_space.hpp  board.hpp  coord.hpp  dimension.hpp  environment.hpp  piece.hpp  piece_types.hpp
src/: bindings.cpp  board.cpp  environment.cpp  main.cpp  piece.cpp
